syntax = "proto3";

package kamereo.interview.order;

option java_package = "vn.kamereo.interview.order";
option java_multiple_files = true;

import "kamereo/interview/order.proto";

message CreateOrderRequest {
    message OrderItem {
        string product_id = 1;
        int64 price = 2;
        int32 quantity = 3;
    }

    string user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    string order_id = 1;
}

message AcceptRequest {
    string order_id = 1;
}

message AcceptResponse {
}

message CancelRequest {
    string order_id = 1;
}

message CancelResponse {
}

message ReceiveRequest {
    string order_id = 1;
}

message ReceiveResponse {
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc Accept (AcceptRequest) returns (AcceptResponse);
    rpc Cancel (CancelRequest) returns (CancelResponse);
    rpc Receive (ReceiveRequest) returns (ReceiveResponse);
}
